fix: Material 3 fixes, Updated UI

--- a/assets/assets/files/app/updates.html
+++ b/assets/assets/files/app/updates.html
@@ -1,6 +1,12 @@
 <html>
     <body>
 
+        <p><b>Version 1.0.0.6</b></p>
+        <ul>
+            <li>Performance Updates & Bug Fixes</li>
+        </ul>
+        <hr />
+
         <p><b>Version 1.0.0.5</b></p>
         <ul>
             <li>All number inputs such as elevation, size etc has been changed to decimal numbers only Textfield.</li>
