feat: Bottom NavBar Theme added

--- a/assets/assets/files/app/updates.html
+++ b/assets/assets/files/app/updates.html
@@ -1,6 +1,13 @@
 <html>
     <body>
 
+        <p><b>Version 1.0.0.8</b></p>
+        <ul>
+            <li><b>Bottom Navigationbar Theme Added</b></li>
+        </ul>
+        <br />
+        <hr />
+
         <p><b>Version 1.0.0.7</b></p>
         <ul>
             <li><b>Text Button</b>: Elevation, Icon Size, Icon Color, Alignment , Overlay Color properties added.</li>
