--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3258692112';
+    var serviceWorkerVersion = "990419543";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
