feat: Icon updated, Code Cleanup

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3964463392";
+    const serviceWorkerVersion = "1152261015";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -56,7 +56,7 @@
 <body style="overflow: hidden; align-items: center;    display:flex; flex-direction:column; justify-content:center; min-height:100vh;">
 
   <div id="loading_indicator" class="container">
-    <img class="indicator" src="./assets/loading.gif" />
+    <img class="indicator" src="favicon.png" />
   </div>
 
   <script>
@@ -78,7 +78,7 @@
         if (loadingIndicator) {
           loadingIndicator.remove();
         }
-      }, 6000);
+      }, 3000);
     };
   </script>
 
