--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 
+  <meta name="google-site-verification" content="jbJJn4_njBk_YnJk33iJJRxWjcmftnEbkMg9Csz40gE" />
+  
   <style>
     .container {
       width: 40px;
